last-screens-added

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,10 @@ body {
     height: 459px;
 }
 
+.block-choose-difficulty-hidden {
+    display: none;
+}
+
 .heading-choose-difficulty {
     margin-top: 52px;
     max-width: 208px;
@@ -62,6 +66,10 @@ body {
 .block-button-start {
     display: flex;
     justify-content: center;
+}
+
+.block-with-cards-hidden {
+    display: none;
 }
 
 .button-start {
@@ -185,15 +193,15 @@ body {
     transform: rotateX(180deg);
 }
 
-.game-timer-button-hidden {
-    display: none;
-}
-
 .game-timer-button {
     display: flex;
     column-gap: 320px;
     margin-bottom: 35px;
     align-items: center;
+}
+
+.game-timer-button-hidden {
+    display: none;
 }
 
 .button-start-again {
@@ -208,6 +216,7 @@ body {
     font-size: 24px;
     line-height: 32px;
     align-items: center;
+    cursor: pointer;
 }
 
 .timer {
@@ -263,4 +272,59 @@ body {
     font-size: 16px;
     line-height: 32px;
     color: #fff;
+}
+
+.block-final-screen {
+    position: absolute;
+    z-index: index 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 480px;
+    height: 459px;
+    background: #c2f5ff;
+    border-radius: 12px;
+}
+
+.block-final-screen-hidden {
+    display: none;
+}
+
+.block-final-screen__icon {
+    padding-top: 30px;
+    padding-bottom: 5px;
+}
+
+.block-final-screen__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.block-final-screen__heading {
+    padding-bottom: 28px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 48px;
+    color: #004980;
+}
+
+.block-final-screen__time {
+    padding-bottom: 10px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    color: #000000;
+}
+
+.block-final-screen__time-content {
+    padding-bottom: 40px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 72px;
+    color: #000000;
 }
