--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,7 +11,14 @@ body {
     justify-content: center;
     height: 100vh;
     background-color: #00008b;
+ 
 }
+
+
+@keyframes show {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
 
 .block-heading-difficulty {
     display: flex;
@@ -23,6 +30,7 @@ body {
     border-radius: 12px;
     width: 480px;
     height: 459px;
+    animation: 3s show ease;
 }
 
 .block-choose-difficulty-hidden {
@@ -45,6 +53,7 @@ body {
 .buttons-difficulty {
     display: flex;
     justify-content: center;
+    align-items: center;
     column-gap: 24px;
     padding-bottom: 67px;
 }
@@ -60,16 +69,31 @@ body {
     font-size: 64px;
     line-height: 72px;
     border: none;
+    transition: 0.3s;
     cursor: pointer;
+
+    &:hover {
+        width: 102px;
+    height: 102px;
+        transform: translateY(-5px);
+        box-shadow: 7px 7px 5px darkred;
+    }
+
+    &:active {
+        transform: translateY(-3px);
+    }
 }
 
 .clicked-button {
-    border: 1px solid red  !important;
+    transition: 0.3s;
+    border: 3px solid red  !important;
 }
 
 .block-button-start {
     display: flex;
     justify-content: center;
+
+   
 }
 
 .block-with-cards-hidden {
@@ -88,6 +112,11 @@ body {
     line-height: 32px;
     cursor: pointer;
     border: none;
+    transition: 0.2s;
+    &:hover {
+        transform: translateY(-5px);
+        box-shadow: 7px 7px 5px darkgreen;
+    }
 }
 
 .game {
@@ -133,6 +162,7 @@ body {
     gap: 20px;
     flex-wrap: wrap;
     width: 670px;
+  
 }
 
 .card {
@@ -141,6 +171,17 @@ body {
     height: 133px;
     background: #fff;
     border-radius: 4px;
+    cursor: pointer;
+    animation: 3s show ease;
+}
+
+.card img {
+
+    &:hover {
+        transform: translateY(-1px);
+        box-shadow: 0px 7px 5px white;
+    }
+    
 }
 
 .card-shirt-hidden {
@@ -152,6 +193,8 @@ body {
 }
 
 .card-face {
+    animation: 3s show ease;
+    height: 133px;
     display: block;
 }
 
@@ -202,6 +245,7 @@ body {
     column-gap: 320px;
     margin-bottom: 35px;
     align-items: center;
+    animation: 3s show ease;
 }
 
 .game-timer-button-hidden {
@@ -220,7 +264,12 @@ body {
     font-size: 24px;
     line-height: 32px;
     align-items: center;
+    transition: 0.2s;
     cursor: pointer;
+    &:hover {
+        transform: translateY(-2px);
+        box-shadow: 7px 7px 5px darkgreen;
+    }
 }
 
 .timer {
